[package]
name = "os-xtask-utils"
description = "Program executation for xtask in os or bootloader project"
version = "0.0.0"
authors = ["YdrMaster <ydrml@hotmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/YdrMaster/os-xtask-utils"
documentation = "https://docs.rs/os-xtask-utils"
license = "MulanPSL-2.0 OR MIT"
keywords = ["command", "cli"]
categories = ["command-line-utilities"]

[dependencies]
once_cell = "1.15"
